@@ -1,5 +1,6 @@
 Release 0.3.8
 - Add Catalog Permissions and PDF::Signature::Reference roles
+- Fixed PDF::ExtGState handling of named transfer functions, based on pdf-checker.p6 stillhq.com/000390.pdf
 
 Release 0.3.7
 - Populate Info /Creator with Perl and tool-chain versions, and /Producer with actual producer class
